--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ document.addEventListener("DOMContentLoaded", () => {
   quizInput.addEventListener("input", calculateScores);
 });
 </script>
-
+<script>
     // ========== SUBMIT HANDLER ==========
     document.getElementById("submitBtn").onclick = () => {
       const formData = {};
@@ -364,3 +364,4 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
 </body>
 </html>
+
