--- a/index.html
+++ b/index.html
@@ -47,85 +47,78 @@
         <!-- QUESTIONS (all 19 as dropdowns 1-5) -->
         <div id="questionsContainer" class="space-y-4">
           <select name="Attendance & Punctuality" class="w-full border p-2 rounded" required>
-            <option value="">Attendance & Punctuality</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Attendance & Punctuality</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Professional Image & Engagement" class="w-full border p-2 rounded" required>
-            <option value="">Professional Image & Engagement</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Professional Image & Engagement</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Discipline" class="w-full border p-2 rounded" required>
-            <option value="">Discipline</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Discipline</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Active Participation" class="w-full border p-2 rounded" required>
-            <option value="">Active Participation</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Active Participation</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Group Activities & Teamwork" class="w-full border p-2 rounded" required>
-            <option value="">Group Activities & Teamwork</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Group Activities & Teamwork</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Presentation - Content" class="w-full border p-2 rounded" required>
-            <option value="">Presentation - Content</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Presentation - Content</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Presentation - Delivery" class="w-full border p-2 rounded" required>
-            <option value="">Presentation - Delivery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Presentation - Delivery</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Communication Skills" class="w-full border p-2 rounded" required>
-            <option value="">Communication Skills</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Communication Skills</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Analytical Thinking" class="w-full border p-2 rounded" required>
-            <option value="">Analytical Thinking</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Analytical Thinking</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Creativity & Innovation" class="w-full border p-2 rounded" required>
-            <option value="">Creativity & Innovation</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Creativity & Innovation</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Professional Ethics Awareness" class="w-full border p-2 rounded" required>
-            <option value="">Professional Ethics Awareness</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Professional Ethics Awareness</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Student-Faculty Interaction Quality" class="w-full border p-2 rounded" required>
-            <option value="">Student-Faculty Interaction Quality</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Student-Faculty Interaction Quality</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Overall Engagement" class="w-full border p-2 rounded" required>
-            <option value="">Overall Engagement</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Overall Engagement</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Politeness & Courtesy" class="w-full border p-2 rounded" required>
-            <option value="">Politeness & Courtesy</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Politeness & Courtesy</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Use of Real-World Examples" class="w-full border p-2 rounded" required>
-            <option value="">Use of Real-World Examples</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Use of Real-World Examples</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Ease of Asking Questions" class="w-full border p-2 rounded" required>
-            <option value="">Ease of Asking Questions</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Ease of Asking Questions</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Individual Attention to Students" class="w-full border p-2 rounded" required>
-            <option value="">Individual Attention to Students</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Individual Attention to Students</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
           <select name="Encourages and Motivates Students" class="w-full border p-2 rounded" required>
-            <option value="">Encourages and Motivates Students</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+            <option value="">Encourages and Motivates Students</option><option>Poor</option><option>Below Average</option><option>Average</option><option>Good</option><option>Excellent</option>
           </select>
         </div>
 
-        <!-- SCORES -->
-        <input name="quizMarks" id="quizMarks" type="number" placeholder="Quiz Marks (out of 100)" class="w-full border p-2 rounded mt-4" required>
-        <div class="mt-4 p-3 border rounded bg-gray-50">
-          <p><b>Average Score:</b> <span id="avgScore">0</span></p>
-          <p><b>Weighted Score:</b> <span id="weightedScore">0</span></p>
-          <p><b>Grade:</b> <span id="grade">-</span></p>
-        </div>
-        <textarea name="comments" placeholder="Comments" class="w-full border p-2 rounded mt-4"></textarea>
+      <!-- ================= PAGE 3: SCORES ================= -->
+<div class="form-page" id="page3">
+  <h2 class="text-lg font-semibold mb-4">Enter Quiz Marks</h2>
 
-        <div class="flex justify-between mt-4">
-          <button type="button" id="backBtn3" class="bg-gray-400 text-white px-4 py-2 rounded">Back</button>
-          <button type="button" id="nextBtn3" class="bg-blue-500 text-white px-4 py-2 rounded">Calculate</button>
-        </div>
-      </div>
+  <input name="quizMarks" id="quizMarks" type="number" placeholder="Quiz Marks (out of 100)" class="w-full border p-2 rounded mt-4" required>
 
-      <!-- ================= PAGE 4: CONFIRMATION ================= -->
-      <div class="form-page" id="page4">
-        <h2 class="text-lg font-semibold mb-4">Confirm Submission</h2>
-        <p>Please review your scores before submitting.</p>
-        <div class="mt-4 p-3 border rounded bg-gray-50">
-          <p><b>Average Score:</b> <span id="avgScoreFinal">0</span></p>
-          <p><b>Weighted Score:</b> <span id="weightedScoreFinal">0</span></p>
-          <p><b>Grade:</b> <span id="gradeFinal">-</span></p>
-        </div>
+  <div class="mt-4 p-3 border rounded bg-gray-50">
+    <p><b>Weighted Score:</b> <span id="weightedScore">0</span></p>
+    <p><b>Grade:</b> <span id="grade">-</span></p>
+  </div>
+
+  <textarea name="comments" placeholder="Comments" class="w-full border p-2 rounded mt-4"></textarea>
+
+  <div class="flex justify-between mt-4">
+    <button type="button" id="backBtn3" class="bg-gray-400 text-white px-4 py-2 rounded">Back</button>
+  </div>
+</div>
 
         <div class="flex justify-between mt-4">
           <button type="button" id="backBtn4" class="bg-gray-400 text-white px-4 py-2 rounded">Back</button>
@@ -204,3 +197,4 @@
   </script>
 </body>
 </html>
+
